# hermes-desktop-tauri

./: .env.example  .gitignore  .npmrc  .start-dev.ps1  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  OVERNIGHT-PR-SHAKEDOWN.md  README.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  server-bun.ts  server-entry.js  tauri-signing-key  tauri-signing-key.pub  vite.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml  security.yml
.github/workflows/: ci.yml  docker-publish.yml  tauri-release.yml
docs/: README.md  docker.md
docs/hermesworld/: MASTER-PLAN.md  PUBLIC-ROADMAP.md  master-roadmap.md
docs/playground/: README.md
docs/swarm/: QUICKSTART.md
scripts/: build-tauri-release.ps1  rebuild-tauri-binary.ps1  rebuild-tauri-bundle.ps1  run-bun-build.ps1  run-cargo-build.ps1  run-makensis.ps1  run-tauri-build.ps1  start-hermes-agent.ps1
src/: routeTree.gen.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/keys/: README.md  hws.key.pub
src-tauri/src/: lib.rs  main.rs
src/components/: update-center-notifier.tsx  workspace-shell.tsx
src/hooks/: use-gateway-caps.ts
src/lib/: desktop-status-banner.tsx  desktop-status.ts  tauri-bridge.ts
src/routes/: __root.tsx
src/server/: copilotkit-runtime.ts
tools/: cargo-msvc.bat  cargo-msvc.ps1  init-msvc.ps1  run-build.ps1  run-build2.ps1  start-build.ps1
(+12 files in other folders)
