[package]
name = "hermes-workspace"
version = "2.5.0"
description = "Hermes Workspace — Tauri + Bun desktop"
authors = ["Hermes Workspace"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "hermes_workspace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
open = "5"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
dirs = "5"

[features]
# Default features: custom-protocol enabled for production builds (Tauri runtime
# serves the frontend bundle from a custom protocol). Disable for `tauri dev` if
# you want to talk to a remote dev server.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
